@@ -27,7 +27,8 @@ remctl 2.10 (unreleased)
     matching the documentation.  Thanks, Marcus Watts.
 
     Fix builds outside the source directory by creating the docs directory
-    properly.  Based on a patch by Marcus Watts.
+    properly, based on a patch by Marcus Watts.  Also fix make clean and
+    the POD tests when run outside the source directory.
 
     Change the Net::Remctl documentation for remctl() to suggest 0 and the
     empty string as default values for port and principal, since this
